# portfolio-analytics-system

./: .dockerignore  .env.example  .env.example-env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  prompt.txt  pyproject.toml
alembic/: env.py
libs/portfolio-common/: pyproject.toml  requirements.txt
libs/portfolio-common/portfolio_common/: config.py  database_models.py  db.py  events.py  idempotency_repository.py  kafka_consumer.py  kafka_utils.py  logging_utils.py  monitoring.py  outbox_dispatcher.py  outbox_repository.py
libs/portfolio-common/tests/: conftest.py
libs/portfolio-common/tests/integration/: test_dlq_replayer.py  test_outbox_dispatcher.py
services/calculators/cost-calculator-service/: Dockerfile  pyproject.toml
services/calculators/cost_calculator_service/: Dockerfile  pyproject.toml
services/calculators/cost_calculator_service/app/: consumer.py  consumer_manager.py  main.py  repository.py
services/calculators/position-valuation-calculator/: Dockerfile  pyproject.toml
services/calculators/position-valuation-calculator/app/: consumer_manager.py  main.py
services/ingestion-service/: Dockerfile  pyproject.toml  requirements.txt
services/ingestion-service/app/: crud.py  database.py  main.py
services/ingestion-service/app/DTOs/: market_price_dto.py  portfolio_dto.py  transaction_dto.py
services/ingestion-service/app/models/: transaction.py
services/ingestion-service/app/routers/: fx_rates.py  instruments.py  market_prices.py  portfolios.py  transactions.py
services/ingestion-service/app/services/: ingestion_service.py
services/ingestion-service/tests/: conftest.py  requirements.txt
services/ingestion-service/tests/integration/: test_transaction_router.py
services/ingestion-service/tests/unit/: test_transaction_model.py
services/persistence-service/: Dockerfile  pyproject.toml  requirements.txt
services/persistence-service/app/: consumer_manager.py  main.py
services/persistence-service/app/consumers/: fx_rate_consumer.py  instrument_consumer.py  market_price_consumer.py  portfolio_consumer.py  transaction_consumer.py
services/persistence-service/app/repositories/: fx_rate_repository.py  instrument_repository.py  market_price_repository.py  portfolio_repository.py
services/persistence_service/: Dockerfile  pyproject.toml
services/persistence_service/app/: consumer_manager.py  main.py  monitoring.py  web.py
services/persistence_service/app/consumers/: fx_rate_consumer.py  instrument_consumer.py  market_price_consumer.py  portfolio_consumer.py  transaction_consumer.py
services/persistence_service/app/repositories/: fx_rate_repository.py  instrument_repository.py  market_price_repository.py  portfolio_repository.py  transaction_db_repo.py
services/persistence_service/tests/: conftest.py
services/persistence_service/tests/integration/: test_repositories.py
services/query-service/: Dockerfile  pyproject.toml  requirements.txt
services/query-service/app/: dependencies.py  main.py  monitoring.py  utils.py
services/query-service/app/dtos/: fx_rate_dto.py  position_dto.py  transaction_dto.py  valuation_dto.py
services/query-service/app/repositories/: fx_rate_repository.py  instrument_repository.py  portfolio_repository.py  position_repository.py  price_repository.py  transaction_repository.py
services/query-service/app/routers/: fx_rates.py  instruments.py  portfolios.py  positions.py  prices.py  transactions.py
services/query-service/app/services/: fx_rate_service.py  instrument_service.py  portfolio_service.py  position_service.py  price_service.py  transaction_service.py
services/timeseries-generator-service/: Dockerfile  pyproject.toml
services/timeseries-generator-service/app/: consumer_manager.py  main.py  web.py
services/timeseries-generator-service/app/consumers/: portfolio_timeseries_consumer.py  position_timeseries_consumer.py
services/timeseries-generator-service/app/core/: portfolio_timeseries_logic.py  position_timeseries_logic.py
services/timeseries-generator-service/app/repositories/: timeseries_repository.py
services/transaction-persistence-service/: Dockerfile  pyproject.toml  requirements.txt  run_migrations.sh  startup.sh
services/transaction-persistence-service/app/: main.py
services/transaction-persistence-service/app/consumers/: transaction_consumer.py
services/transaction-persistence-service/app/models/: transaction_event.py
services/transaction-persistence-service/app/repositories/: transaction_db_repo.py
services/transaction-persistence-service/tests/unit/: test_transaction_db_repo.py
src/libs/concentration-analytics-engine/: pyproject.toml
src/libs/financial-calculator-engine/: pyproject.toml
src/libs/performance-calculator-engine/: pyproject.toml
src/libs/portfolio-common/: pyproject.toml
src/libs/portfolio-common/portfolio_common/: config.py  database_models.py  db.py  db_base.py  events.py  exceptions.py  health.py  idempotency_repository.py  kafka_admin.py  kafka_consumer.py  kafka_utils.py  logging_utils.py  models.py  monitoring.py  openapi_enrichment.py  outbox_dispatcher.py  outbox_repository.py  position_state_repository.py  recalculation_job_repository.py  reprocessing.py  reprocessing_job_repository.py  reprocessing_repository.py  utils.py  valuation_job_repository.py
src/libs/risk-analytics-engine/: pyproject.toml
src/libs/risk-analytics-engine/src/: __init__.py
src/services/calculators/performance_calculator_service/: Dockerfile  pyproject.toml
src/services/ingestion_service/: Dockerfile  pyproject.toml
src/services/ingestion_service/app/: ack_response.py  adapter_mode.py  main.py  ops_controls.py  request_metadata.py
src/services/ingestion_service/tests/: conftest.py
src/services/query_service/: Dockerfile  pyproject.toml
src/services/query_service/app/: dependencies.py  enterprise_readiness.py  main.py  precision_policy.py
src/services/recalculation_service/: Dockerfile  pyproject.toml
src/services/recalculation_service/app/: consumer_manager.py  main.py  web.py
(+866 files in other folders)
