# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-analytics-system"
version = "0.1.0"
description = "Event-driven system for portfolio analytics."
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "deployment*"]

# --- UPDATED: Pytest Configuration ---
[tool.pytest.ini_options]
# The test root is now the single top-level tests directory
testpaths = [
    "tests"
]
# Add source roots to the Python path for test discovery
pythonpath = [
    ".",
    "src",
    "src/libs/portfolio-common",
    "src/libs/financial-calculator-engine/src",
    "src/libs/performance-calculator-engine/src",
    "src/libs/risk-analytics-engine/src",
    "src/services/ingestion_service",
    "src/services/persistence_service",
    "src/services/query_service",
    "src/services/calculators/cashflow_calculator_service",
    "src/services/calculators/cost_calculator_service",
    "src/services/calculators/position_calculator",
    "src/services/calculators/position_valuation_calculator",
    "src/services/timeseries_generator_service",
]
addopts = "--strict-markers"
minversion = "6.0"
# FIX: Explicitly set the default loop scope to silence the warning
asyncio_default_fixture_loop_scope = "function"
markers = [
    "asyncio: mark a test as being an asyncio test",
]
filterwarnings = [
    "ignore:Please use `import python_multipart` instead.:PendingDeprecationWarning"
]