# libs/portfolio-common/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-common"
version = "0.1.0"
description = "Common utilities, models, and configurations for the Portfolio Analytics System."
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.7.4",
    "confluent-kafka[librdkafka]==2.4.0",
    "SQLAlchemy==2.0.30",
    "python-dotenv==1.0.1",
    "asyncpg==0.29.0",
    "tenacity==8.2.3",
    "alembic==1.13.1",
    "python-json-logger==2.0.7"
]

[tool.setuptools.packages.find]
where = ["."]