[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries-generator-service"
version = "0.1.0"
description = "A service to generate daily position and portfolio time series data."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["app"]