[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-persistence-service"
version = "0.1.0"
description = "Portfolio Analytics - Transaction Persistence Service"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]