# services/calculators/cost_calculator_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-calculator-service"
version = "0.1.0"
description = "Portfolio Analytics - Cost Calculator Service"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "confluent-kafka==2.4.0",
    "pydantic==2.7.4",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "prometheus-fastapi-instrumentator==7.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]