[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "position-valuation-calculator"
version = "0.1.0"
description = "A service to calculate the market value of portfolio positions."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["app"]