[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "position-valuation-calculator"
version = "0.1.0"
description = "A service to calculate the market value of portfolio positions."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.30",
    "psycopg2-binary==2.9.9",
    "confluent-kafka==2.4.0",
    "pydantic==2.7.4",
    "tenacity==8.2.3",
    "python-dotenv==1.0.1"
]

[tool.setuptools.packages.find]
where = ["app"]