# src/libs/concentration-analytics-engine/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "concentration-analytics-engine"
version = "0.1.0"
description = "A core library for calculating portfolio concentration analytics."
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]