# src/libs/performance-calculator-engine/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-calculator-engine"
version = "0.1.0"
description = "A core library for calculating portfolio performance metrics like TWR."
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.0.0",
    "python-dateutil>=2.8"
]

[tool.setuptools.packages.find]
where = ["src"]