# src/libs/risk-analytics-engine/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-analytics-engine"
version = "0.1.0"
description = "A core library for calculating portfolio risk analytics."
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0"
]

[tool.setuptools.packages.find]
where = ["src"]