# services/ingestion_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion_service"
version = "0.1.0"
description = "Portfolio Analytics - Ingestion Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.4",
    "confluent-kafka==2.4.0",
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "python-multipart",
    "prometheus-fastapi-instrumentator==7.0.0"
]

[tool.setuptools.packages.find]
where = ["."]