# src/services/recalculation_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recalculation-service"
version = "0.1.0"
description = "A dedicated service for performing historical recalculations."
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.30",
    "asyncpg==0.29.0",
    "confluent-kafka==2.4.0",
    "pydantic==2.7.4",
    "tenacity==8.2.3",
    "python-dotenv==1.0.1",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "prometheus-fastapi-instrumentator==7.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]