# src/services/calculators/performance_calculator_service/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "performance-calculator-service"
version = "0.1.0"
description = "A service to calculate daily portfolio performance metrics."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "prometheus-fastapi-instrumentator==7.0.0"
]

[tool.setuptools.packages.find]
where = ["app"]